feat(backend): add password validation